implemented client using OpenSSL BIO

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,12 @@
 AUTOMAKE_OPTIONS = foreign
 
 EXTRA_DIST = \
-  xmlrpc.h
+  xmlrpc-value.h \
+  xmlrpc-call.h \
+  xmlrpc-client.h \
+  xmlrpc-server.h \
+  xml.h \
+  bench.h
 
 AM_CFLAGS= \
   -std=gnu99 \
@@ -9,19 +14,30 @@ AM_CFLAGS= \
   -D_REENTRANT \
   -D_GNU_SOURCE
 
+noinst_LIBRARIES = \
+  libxr.a
+
+libxr_a_SOURCES = \
+  xmlrpc-value.c \
+  xmlrpc-call.c \
+  xmlrpc-client.c \
+  xmlrpc-server.c
+
 bin_PROGRAMS = \
   server \
-  client
+  client \
+  test
 
-LDADD = $(XR_LIBS)
+LDADD = $(XR_LIBS) libxr.a -lssl -lcrypto
+
+test_SOURCES = \
+  test.c
 
 server_SOURCES = \
-  server.c \
-  xmlrpc.c
+  server.c
 
 client_SOURCES = \
-  client.c \
-  xmlrpc.c
+  client.c
 
 #CLEANFILES = create.c
 #EXTRA_DIST += create.pgc
