added man page for xdl-compiler

--- a/xdl-compiler/Makefile.am
+++ b/xdl-compiler/Makefile.am
@@ -7,6 +7,8 @@ AM_CFLAGS = \
 AM_YFLAGS = -d
 LDADD = $(XR_LIBS)
 
+man_MANS = xdl-compiler.1
+
 bin_PROGRAMS = xdl-compiler
 
 xdl_compiler_SOURCES = xdl.c main.c parser.y scanner.l
