added pkg-config file

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,3 +1,6 @@
 AUTOMAKE_OPTIONS = foreign
 
 SUBDIRS = include lib xdl-compiler tests docs
+
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = libxr.pc
