--- a/libxr.pc.in
+++ b/libxr.pc.in
@@ -6,6 +6,6 @@ includedir=@includedir@
 Name: libxr
 Description: XR library
 Version: @VERSION@
-Requires: glib-2.0 libxml-2.0
+Requires: glib-2.0 libxml-2.0 gthread-2.0
 Libs: -L${libdir} -lxr
 Cflags: -I${includedir}/libxr
