refactored client and server (separated http and ssl init code)

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,5 +1,7 @@
 EXTRA_DIST = \
-  xml-priv.h
+  xml-priv.h \
+  xr-http.h \
+  xr-utils.h
 
 AM_CFLAGS= \
   -std=gnu99 \
@@ -18,4 +20,6 @@ libxr_la_SOURCES = \
   xr-value.c \
   xr-call.c \
   xr-client.c \
-  xr-server.c
+  xr-server.c \
+  xr-http.c \
+  xr-utils.c
