prepare for release

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,3 +4,5 @@ SUBDIRS = include lib xdl-compiler tests docs
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = libxr.pc
+
+EXTRA_DIST = libxr.pc.in
