--- a/.gitignore
+++ b/.gitignore
@@ -6,14 +6,14 @@ Makefile.in
 *.o
 *.lo
 *.la
+*~
+*.swp
 
 /aclocal.m4
 /autom4te.cache
 /config.*
 /configure
 /depcomp
-*.tar.bz2
-*.tar.gz
 /install-sh
 /missing
 /stamp-h1
@@ -21,6 +21,10 @@ Makefile.in
 /ylwrap
 /libtool
 /ltmain.sh
+/compile
+/libxr.pc
+/tags
+/.test
 
 /tests/client
 /tests/server
@@ -29,24 +33,15 @@ Makefile.in
 /tests/tclient
 /tests/unit/t001-http
 /tests/unit/t002-call
+/tests/TCommon.c
+/tests/TCommon.h
+/tests/TTest*.c
+/tests/TTest*.h
 
 /xdl-compiler/parser.c
 /xdl-compiler/parser.h
 /xdl-compiler/scanner.c
 /xdl-compiler/xdl-compiler
 
-/libxr.pc
-
 /docs/html
 /docs/man3
-
-/.*
-/compile
-/libxr-*.tgz
-*~
-
-tests/TCommon.c
-tests/TCommon.h
-tests/TTest*.c
-tests/TTest*.h
-
