--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -17,6 +17,7 @@ libxr_la_LIBADD = $(XR_LIBS) -lssl -lcrypto
 libxr_la_LDFLAGS = -version-info 0:0:0 -no-undefined -z now
 
 libxr_la_SOURCES = \
+  xr-lib.c \
   xr-value.c \
   xr-call.c \
   xr-client.c \
