add debug to the tests

--- a/tests/unit/Makefile.am
+++ b/tests/unit/Makefile.am
@@ -29,6 +29,7 @@ t001_http_CFLAGS = \
 
 t001_http_SOURCES = \
   t001-http.c \
+  $(top_srcdir)/lib/xr-lib.c \
   $(top_srcdir)/lib/xr-http.c
 
 # t002
@@ -38,5 +39,6 @@ t002_call_CFLAGS = \
 
 t002_call_SOURCES = \
   t002-call.c \
+  $(top_srcdir)/lib/xr-lib.c \
   $(top_srcdir)/lib/xr-call.c \
   $(top_srcdir)/lib/xr-value.c
