add vim syntax highlighting

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 AUTOMAKE_OPTIONS = foreign
 
-SUBDIRS = include lib xdl-compiler tests docs
+SUBDIRS = include lib xdl-compiler tests docs misc
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = libxr.pc
