json-rpc implementation (as optional transport)
http://json-rpc.org/wiki/specification

Server can now handle both XML-RPC and JSON-RPC calls at the same
time.

JSON-RPC does not support following xr_value types: time, blob.

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,3 +6,15 @@ pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = libxr.pc
 
 EXTRA_DIST = libxr.pc.in
+
+libxrincludedir = $(includedir)/libxr
+#libxrinclude_HEADERS = xr-config.h
+
+DISTCLEANFILES = xr-config.h
+
+install-exec-local:
+	$(mkinstalldirs) $(DESTDIR)$(libxrincludedir)
+	$(INSTALL_DATA) xr-config.h $(DESTDIR)$(libxrincludedir)/xr-config.h
+
+uninstall-local:
+	rm -f $(DESTDIR)$(libxrincludedir)/xr-config.h
