Only build test programs during make check rather than during make.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -46,7 +46,7 @@ LDADD = \
   $(JSON_LIBS) \
   $(top_builddir)/lib/libxr.la
 
-noinst_PROGRAMS = \
+check_PROGRAMS = \
   tclient \
   client \
   session-client \
