Check for OpenSSL libraries through pkg-config.
Instead of hardcoding linking to libssl and libcrypto, and ignoring
eventual compiler flags needed, use pkg-config to discover OpenSSL
presence.

--- a/configure.ac
+++ b/configure.ac
@@ -29,12 +29,15 @@ AC_CHECK_PROG(RE2C, re2c, re2c)
 
 PKG_CHECK_MODULES(GLIB, [glib-2.0 >= 2.12.0 gthread-2.0 >= 2.12.0])
 PKG_CHECK_MODULES(XML, [libxml-2.0 >= 2.6.20])
+PKG_CHECK_MODULES(SSL, [libssl libcrypto])
 PKG_CHECK_MODULES(JSON, [json >= 0.3], have_json=yes, have_json=no)
 
 AC_SUBST(GLIB_CFLAGS)
 AC_SUBST(GLIB_LIBS)
 AC_SUBST(XML_CFLAGS)
 AC_SUBST(XML_LIBS)
+AC_SUBST(SSL_CFLAGS)
+AC_SUBST(SSL_LIBS)
 AC_SUBST(JSON_CFLAGS)
 AC_SUBST(JSON_LIBS)
 
