--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -7,6 +7,7 @@ EXTRA_DIST = \
 AM_CFLAGS= \
   $(GLIB_CFLAGS) \
   $(XML_CFLAGS) \
+  $(SSL_CFLAGS) \
   $(JSON_CFLAGS) \
   -I$(top_srcdir) \
   -I$(top_srcdir)/include \
@@ -19,8 +20,8 @@ lib_LTLIBRARIES = \
 libxr_la_LIBADD = \
   $(GLIB_LIBS) \
   $(XML_LIBS) \
+  $(SSL_LIBS) \
   $(JSON_LIBS) \
-  -lssl -lcrypto \
   $(WIN32LIBS)
 
 libxr_la_LDFLAGS = -version-info $(LIB_XR_VERSION) -no-undefined
