--- a/libxr.pc.in
+++ b/libxr.pc.in
@@ -6,6 +6,7 @@ includedir=@includedir@
 Name: libxr
 Description: XR library
 Version: @VERSION@
-Requires: glib-2.0 libxml-2.0 gthread-2.0
+Requires: @GLIB_REQUIRES@
+Requires.private: @XML_REQUIRES@ @SSL_REQUIRES@ @JSON_REQUIRES@
 Libs: -L${libdir} -lxr
 Cflags: -I${includedir}/libxr
