fix make distcheck (.sources-ts was left behind after make clean)

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -46,7 +46,7 @@ AM_CFLAGS= \
 
 AM_LDFLAGS = -static
 
-CLEANFILES = $(BUILT_SOURCES)
+CLEANFILES = $(BUILT_SOURCES) .sources-ts
 
 LDADD = \
   $(GLIB_LIBS) \
