prepare for the 0.9.97 release

--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,5 @@
 AC_PREREQ(2.60)
-AC_INIT([libxr],[0.9.96],[3e@zonio.net],[libxr])
+AC_INIT([libxr],[0.9.97],[libxr@zhost.zonio.net],[libxr])
 AC_CONFIG_SRCDIR([Makefile.am])
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_HEADER([config.h])
